feat: guard if list already exist & fixed toast
