# server/swagger-output.json
@@ -535,6 +535,50 @@
         }
       }
     },
+    "/api/v1/listings/bulk": {
+      "post": {
+        "tags": [
+          "v1 | Listing"
+        ],
+        "description": "Bulk create new product listings.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "length": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/listings/{id}": {
       "put": {
         "tags": [
